Fixed things and added custom favicon

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter: rouge
 
 # Permalinks
 # permalink: pretty
-permalink: /:categories/:year/:title:output_ext
+permalink: /:categories/:year/:title
 
 # Setup
 title: tristanlukens
